# src/models/Postage.js
@@ -1,18 +1,8 @@
 const mongoose = require('mongoose')
-const { v4: uuidv4 } = require('uuid')
 
 const PostageSchema = new mongoose.Schema({
-    _id: {
-        type: String,
-        default: function generateUUID() {
-            return uuidv4()
-        }
-        //Fazer referencia ao ID do usuario
-    },
 
-    usuario_post: [
-        { type: mongoose.Schema.Types.ObjectId, ref: 'UserCommon'} || { type: mongoose.Schema.Types.ObjectId, ref: 'UserCareviger'}
-    ],
+    usuario: { type: mongoose.Schema.Types.ObjectId, ref: 'UserCommon'} || { type: mongoose.Schema.Types.ObjectId, ref: 'UserCareviger'},
 
     conteudo: {
         type: String,
